--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -15,5 +15,7 @@ plugins:
   - '@typescript-eslint'
 rules: {
   no-use-before-define: off,
-  '@typescript-eslint/no-use-before-define': ['error']
+  '@typescript-eslint/no-use-before-define': ['error'],
+  no-unused-vars: off,
+  "@typescript-eslint/no-unused-vars": error
 }
