--- a/package.json
+++ b/package.json
@@ -6,32 +6,33 @@
   "private": false,
   "dependencies": {
     "@material-ui/core": "^4.12.2",
-    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react-dom": "^17.0.0",
-    "js-yaml-loader": "^1.2.2",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.0",
     "typescript": "^4.1.2"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.171",
     "@types/react": "^17.0.14",
-    "@typescript-eslint/eslint-plugin": "^4.28.4",
-    "@typescript-eslint/parser": "^4.28.4",
-    "eslint": "^7.31.0",
+    "@types/react-beautiful-dnd": "^13.1.1",
+    "@types/styled-components": "^5.1.11",
+    "@typescript-eslint/eslint-plugin": "^4.0.0",
+    "@typescript-eslint/parser": "^4.0.0",
+    "eslint": "^7.0.0-rc.0",
     "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-import": "^2.0.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-react": "^7.24.0",
-    "node-sass": "5.0.0",
-    "sass-loadyer": "^12.1.0",
+    "eslint-plugin-react": "^7.0.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
