--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
-    "typescript": "^4.1.2"
+    "typescript": "^4.1.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.171",
     "@types/react": "^17.0.14",
     "@types/react-beautiful-dnd": "^13.1.1",
     "@types/styled-components": "^5.1.11",
+    "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.0.0",
     "@typescript-eslint/parser": "^4.0.0",
     "eslint": "^7.0.0-rc.0",
