--- a/package.json
+++ b/package.json
@@ -5,16 +5,17 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
-    "@material-ui/core": "^4.12.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react-dom": "^17.0.0",
+    "antd": "^4.18.2",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
+    "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
@@ -25,6 +26,7 @@
     "@types/lodash": "^4.14.171",
     "@types/react": "^17.0.14",
     "@types/react-beautiful-dnd": "^13.1.1",
+    "@types/react-color": "^3.0.6",
     "@types/styled-components": "^5.1.11",
     "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.0.0",
