--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-json-editor-ajrm": "^2.5.2",
     "antd": "^4.18.2",
-    "jsoneditor": "^9.5.11",
-    "jsoneditor-react": "^3.1.2",
+    "graphql": "^16.2.0",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
+    "react-json-editor-ajrm": "^2.5.13",
     "react-router-dom": "6",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
