--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-react": "^7.0.0",
+    "raw-loader": "^4.0.2",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
