--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
-    "@apollo/client": "^3.5.6",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -16,6 +15,7 @@
     "antd": "^4.18.2",
     "graphql": "^16.2.0",
     "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-color": "^2.19.3",
@@ -23,6 +23,7 @@
     "react-json-editor-ajrm": "^2.5.13",
     "react-router-dom": "6",
     "react-scripts": "4.0.3",
+    "react-use-localstorage": "^3.5.3",
     "styled-components": "^5.3.0",
     "typescript": "^4.1.2",
     "uuid": "^8.3.2"
