--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -17,5 +17,5 @@ rules: {
   no-use-before-define: off,
   '@typescript-eslint/no-use-before-define': ['error'],
   no-unused-vars: off,
-  "@typescript-eslint/no-unused-vars": warn
+#  "@typescript-eslint/no-unused-vars": warn
 }
