add router basename

--- a/package.json
+++ b/package.json
@@ -76,5 +76,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://github.com/ansoxlu/report-editor/tree/gh-pages"
+  "homepage": "https://ansoxlu.github.io/report-editor"
 }
