--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "report-editor",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
+  "homepage": "https://github.com/ansoxlu/report-editor",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -28,6 +29,7 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.180",
+    "@types/node": "^17.0.23",
     "@types/react": "^17.0.33",
     "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-color": "^3.0.6",
